@@ -2,7 +2,7 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: SLF4J API
 Bundle-SymbolicName: org.slf4j
-Bundle-Version: 1.5.11
+Bundle-Version: 1.6.2
 Bundle-ClassPath: org.slf4j.jar
 Bundle-Vendor: QOS.ch
 Bundle-RequiredExecutionEnvironment: J2SE-1.5
