@@ -1,8 +1,8 @@
 <library id="slf4j" symbolicName="org.slf4j">
 	<name>SLF4J API</name>
 	<description>SLF4J API.</description>
-	<version>1.5</version>
-    <release>8</release>
+	<version>1.6</version>
+    <release>2</release>
 	<homeUri>http://www.slf4j.org/</homeUri>
 	<downloadUri>http://www.slf4j.org/download.html</downloadUri>
 	<provider>QOS.ch</provider>
